# deep-reinforcement-learning

./: checkpoint.pth  pyproject.toml
cross-entropy/: CEM.ipynb
discretization/: Discretization.ipynb
hill-climbing/: Hill_Climbing.ipynb
lab-taxi/: agent.py  main.py
monte-carlo/: Monte_Carlo.ipynb
p2_continuous-control/: Continuous_Control.ipynb  README.md  Report.pages  checkpoint_actor.pth  checkpoint_critic.pth
p3_collab-compet/: README.md  Report.pages  Tennis.ipynb  agent0_actor.pth  agent0_critic.pth  agent1_actor.pth  agent1_critic.pth
temporal-difference/: Temporal_Difference.ipynb
tile-coding/: Tile_Coding.ipynb
