[tool.poetry]
name = "deep-reinforcement-learning"
version = "0.1.0"
description = ""
authors = ["alfonsogarciadecorral <alfonso.garcia.decorral@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
gym = "^0.26.2"
jupyter = "^1.0.0"
matplotlib = "^3.7.0"
seaborn = "^0.12.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
